--- a/main.html
+++ b/main.html
@@ -32,7 +32,7 @@
             <option value="All">All</option>
             <option value="white">white</option>
             <option value="black">black</option>
-            <option value="other">others</option>
+            <option value="red">red</option>
           </select>
 
           <p id="size-text">size</p>
