--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QUIET COMFORTS</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/3ac804e4e0.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/3ac804e4e0.js" crossorigin="anonymous"></script>
-    <script src="index.js" defer></script>
+    <script src="js/index.js" defer></script>
     <div class="header-container">
         <a href=""><i id="menu-icon" class="fa-solid fa-bars fa-xl"></i></a>
         <input type="text" id="search-input" placeholder="search">
